--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.jinke</groupId>
-    <artifactId>persist</artifactId>
+    <artifactId>SimpleDao</artifactId>
     <version>1.0.0</version>
     <build>
         <plugins>
